src/tests/snapshots/swayward__tests__window_opening__check_target_size@dwF1000-dhU-b.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    default-column-width { fixed 1000; }\n    default-window-height {  }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1240 × 680, bounds: 1240 × 680, states: []

post-map configures:
size: 1240 × 680, bounds: 1240 × 680, states: [Activated]
